--- a/_config.yml
+++ b/_config.yml
@@ -150,7 +150,7 @@ footer-hover-col: "#FFE18F"
 #################################
 
 # Fill in your Google Analytics gtag.js ID to track your website using gtag
-gtag: "G-39B11FDV5S"
+#gtag: ""
 
 # Fill in your Google Analytics ID to track your website using Google Analytics
 #google_analytics: ""
